refactor: replace is_system field with type field for role entity; update related logic and types for improved clarity and consistency
