# backend/api/gen/go/permission/service/v1/role.pb.redact.go
@@ -176,7 +176,7 @@ func (x *Role) Redact() string {
 
 	// Safe field: IsProtected
 
-	// Safe field: IsSystem
+	// Safe field: Type
 
 	// Safe field: Permissions
 
